# pgs_workspace

./: .gitignore  GETTING_STARTED.md  LICENSE  NOTICE  README.md  conformance_results.json  env.sh  manifest.json  pyproject.toml
blogs/: blog_13_AI_changed_velocity_pgs_architecture.md  blog_14 AI_Didnot_Break_Your_Software.md  blog_15_My_Backyard_Taught_Me_To_Build_Safer_Software.md  blog_16_human_insight_became_architectural_inversion..md  blog_17_Protocol-Governed_Systems_Your_Governed_Path_To_Risk_Management.md  pgs_01_pgs.md  pgs_02_Protocol_to_Platform.md  pgs_03_Agentic_AI.md  pgs_04_Governing_Agentic_AI.md  pgs_05_agenic_AI_quiet_privilege_escalation.md  pgs_06_different_way_to_build_governance.md  pgs_07_from_serverless_guardrails_to_structured_governance.md  pgs_08_three_dividends.md  pgs_09_smart_coding.md  pgs_10_AI_did_not_solve_governance.md  pgs_11_the_EU_AI_act_is_here.md  pgs_12_inside_pgs_execution.md  pgs_18_vacation_planning_sparked_pgs_architecture.md  pgs_19_why_software_implementation_is_becoming_disposable.md  pgs_20_AI_writes_the_code_who_owns_software.md
doc/: README.md  about_bachi.md  about_omnibachi.md  onboarding_build_first_workflow.md  pgs_architecture_closed-loop_governed_transformation_v0.md  pgs_architecture_deterministic_declarative_execution_v0.md  pgs_architecture_inversion_concepts_v0.md  pgs_change_management_conceptual_model_v0.md  pgs_change_management_conceptual_model_v1.md  pgs_change_management_conceptual_model_v3.md  pgs_cli_cheatsheet.txt  pgs_compiler_conceptual_model_v0.md  pgs_conceptual_model_v0.md  pgs_invariant_core.md  (+10 more)
(+707 files in other folders)
