[project]
name = "pgs-workspace"
version = "0.2.0"
description = "PGS Workspace — runnable entry point for Protocol-Governed Systems"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Bhash Ganti aka Bachi"}]
keywords = [
  "protocol-governed-systems", "pgs", "omnibachi",
  "governance", "declarative", "execution-graph"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/bachipeachy/pgs_workspace"
Repository = "https://github.com/bachipeachy/pgs_workspace"

# Do NOT add repo dependencies here
# Workspace is orchestration layer, not dependency manager

[tool.setuptools]
packages = []

[tool.pgs]
# purely declarative — your system, your rules

workspace_root = "."
data_root = "data"
trace_root = "traces"
snapshot_root = "protocol_snapshot"

# Optional: used by bootstrap script
repos = [
  "../pgs_runtime",
  "../pgs_protocol",
  "../pgs_capabilities",
  "../pgs_blockchain",
  "../pgs_ai_governance"
]